<resources>
    <string name="app_name">My Memory</string>
    <string name="title_home">Home</string>
    <string name="title_files">Files</string>
    <string name="title_shared">Shared</string>
    <string name="title_more">More</string>
    <string name="loading">Loading …</string>
    <string name="add_new">Add New</string>
    <string name="slide_up_options">Slide Up Options</string>
    <string name="settings">Settings</string>
    <string name="done">Done</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="security">Security</string>
    <string name="account">Account</string>
    <string name="storage">Storage</string>
    <string name="search">Search</string>
    <string name="search_hint">Type something to search</string>
    <string name="activity_search_results">Search Results</string>
    <string name="videos">Videos</string>
    <string name="images">Images</string>
    <string name="documents">Documents</string>
    <string name="audios">Audios</string>
    <string name="offline">Offline</string>
    <string name="labeled">Labeled</string>
    <string name="starred">Starred</string>
    <string name="recent">Recent</string>
</resources>