<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="io.eworks.memory.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_files"
        android:name="io.eworks.memory.ui.files.FilesFragment"
        android:label="@string/title_files"
        tools:layout="@layout/fragment_files" />

    <fragment
        android:id="@+id/navigation_shared"
        android:name="io.eworks.memory.ui.shared.SharedFragment"
        android:label="@string/title_shared"
        tools:layout="@layout/fragment_shared" />

    <fragment
        android:id="@+id/navigation_more"
        android:name="io.eworks.memory.ui.more_options.MoreOptionsFragment"
        android:label="@string/title_more"
        tools:layout="@layout/fragment_more_options" />
</navigation>